@@ -1,0 +1,6 @@
+function display (f)
+
+  display(f.polynomial);
+
+endfunction
+
